<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, SimpleCalendar!</string>
    <string name="calendar_app_name">SimpleCalendarImp</string>
	<string name="app_name">CrossFit++</string>
	<string name="login">Login</string>
	<string name="buttonEnterWOD">Enter WOD</string>
	<string name="viewWOD">View WOD</string>
	<string name="height">Height (in inches):</string>
	<string name="bodyfat">Body Fat %:</string>
	<string name="createprofile">Edit Profile</string>
	<string name="amrap">AMRAP</string>
	<string name="tabata">Tabata</string>
	<string name="other">Other</string>
	<string name="benchmark">Benchmark</string>
	<string name="wodlength">Length of WOD:</string>
	<string name="prescribed">Prescribed</string>
	<string name="scaled">Scaled</string>
	<string name="editprofile">Edit Profile</string>
	<string name="recordwod">Record WOD</string>
	<string name="benchmarkview">Benchmark:</string>
	<string name="wodtypeview">WOD Type:</string>
	<string name="asprescribedview">As Prescribed:</string>
	<string name="timeText">Time:</string>
	<string name="editwodButton">Edit WOD</string>
	<string name="gobackButton">Go Back</string>
	<string name="forgotpassword">Forgot Password?</string>
	<string name="recoverpassword">Recover Password</string>
	<string name="goback">Go Back</string>
	<string name="lostPassword">Password: </string>
	<string name="logout">Logout</string>
	<string name="changepassword">Change Password</string>
	<string name="oldpassword">Old Password:</string>
	<string name="newpassword">New Password:</string>
	<string name="confirmnewpassword">Confirm New Password:</string>
	<string name="invalidLogin">Invalid Username/Password</string>
	<string name="deleteaccount">Delete Account</string>
	<string name="fortime">For Time</string>
	<string name="invalidRegistration">One or more of your fields are invalid. Please fix
		before continuing.</string>
	<string name="searchbytags">Search by Tags</string>
	<string name="changebirthday">Change Birthday</string>
	<string name="successfulchange">Password has been successfully changed.</string>
	<string name="weight">Weight (in lbs): </string>
	<string name="separatebycommas">Separate tags by commas</string>
	<string name="heartrate">Resting Heart Rate:</string>
	<string name="tags">Tags: </string>
	<string name="record">Record</string>
	<string name="cancel">Cancel</string>
	<string name="recordbiometric">Record Biometrics</string>
	<string name="usernamerequirements">Must contain 3-13 characters (a-z,0-9,_)</string>
	<string name="passwordrequirements">Must contain 6-15 characters (at least one of each a-z,A-Z,0-9)</string>
	<string name="securityquestionreason">If you forget your security password, we will verify your identity with your secret answer.</string>
	<string name="retrieveSecretQ">Retrieve Security Question</string>
	<string name="invalidSecretA">Your security answer is incorrect. Please try again.</string>
	<string name="invalidUsername">Invalid username. Please enter a valid username and retrieve your security question.</string>
	<string name="rounds">Rounds:</string>
	<string name="exerciseNameDefault">Exercise Name</string>
	<string name="reps">Reps</string>
	<string name="exerciseWeight">Weight</string>
	<string name="min">Minutes</string>
	<string name="sec">Seconds</string>
	<string name="biometricDescription">Description: This tab allows you to enter, edit, and delete your biometrics. Biometrics include height, weight, resting heart rate, and body fat percentage. BMI will be calculated on its own using your entered weight and height. You can find your current biometrics in the profile tab.</string>
	<string name="deleteWOD">Delete WOD</string>
	<string name="viewBiometrics">View Biometrics</string>
	<string name="editBiometrics">Edit Biometrics</string>
	<string name="deleteBiometrics">Delete Biometrics</string>
	<string name="logDescription">Description: This tab allows you to enter and view WODs. You can also delete WODs by first viewing the WOD you would like to delete.</string>
	<string name="lastBiometric">Last recorded Biometrics: </string>
	<string name="lastWOD">Last recorded WOD:</string>
</resources>
