<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/linearLayout1" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/LinearLayout02"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:orientation="vertical">
			<TextView android:text="@string/weight"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/bioWeight"></TextView>
			<EditText android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/bioWeightEdit"></EditText>
			<TextView android:text="@string/bodyfat"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@+id/bioBF"></TextView>
			<EditText android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/bioBFEdit"></EditText>
			<TextView android:id="@+id/bioHR" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/heartrate"></TextView>
			<EditText android:layout_width="match_parent"
				android:layout_height="wrap_content" android:id="@+id/bioHREdit"></EditText>
			<TextView android:id="@+id/bioHeight" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/height"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/bioHeightEdit"></EditText>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/bioTags"
				android:text="@string/tags"></TextView>
			<EditText android:layout_width="match_parent"
				android:layout_height="wrap_content" android:hint="@string/separatebycommas" android:id="@+id/bioTagEdit"></EditText>
			<Button android:id="@+id/bioSubmit" android:layout_height="wrap_content" android:text="@string/record" android:layout_width="match_parent"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/bioCancel" android:layout_width="wrap_content" android:text="Button"></Button>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
