<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:baselineAligned="true" android:orientation="vertical"
	android:id="@+id/calendarLayout">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/LinearLayout02"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:orientation="vertical">
			<TextView android:layout_height="wrap_content" android:text="@string/logDescription" android:id="@+id/textView1" android:layout_width="wrap_content" android:gravity="center"></TextView>
			<DatePicker android:id="@+id/wodDay" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center"></DatePicker>
			<Button android:layout_height="wrap_content" android:text="@string/buttonEnterWOD"
				android:id="@+id/enterwodButton" android:layout_gravity="center"
				android:layout_width="200dip"></Button>
			<Button android:layout_height="wrap_content" android:text="@string/viewWOD"
				android:id="@+id/viewwodButton" android:layout_gravity="center"
				android:layout_width="200dip"></Button>
			<Button android:layout_gravity="center" android:id="@+id/searchButton"
				android:layout_height="wrap_content" android:layout_width="200dip"
				android:text="@string/searchbytags"></Button>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lastcompletedwod" android:text="@string/lastWOD"></TextView>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
