<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:id="@+id/linearLayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="match_parent">
			<TableRow android:id="@+id/tableRow1" android:layout_height="wrap_content" android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/benchmarkview" android:layout_weight="0" android:id="@+id/benchmark"></TextView>
				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Yes" android:id="@+id/isBenchmark"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wodtypeview" android:id="@+id/wodType"></TextView>
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Fran" android:id="@+id/theWodType"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow3" android:layout_height="wrap_content" android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/asprescribedview" android:id="@+id/prescribed"></TextView>
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Yes" android:id="@+id/isPrescribed"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Thrusters 21 reps 95 lbs" android:id="@+id/exercise1"></TextView>
			</TableRow>
			<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow5" android:layout_width="wrap_content">
				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Pull ups 21 reps 0 lbs" android:id="@+id/exercise2"></TextView>
			</TableRow>
			<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow6" android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Thrusters 15 reps 95 lbs" android:id="@+id/exercise3"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Pull ups 15 reps 0 lbs" android:id="@+id/exercise4"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow8" android:layout_height="wrap_content" android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Thrusters 9 reps 95 lbs" android:id="@+id/exercise5"></TextView>
			</TableRow>
			<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow9" android:layout_width="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Pull ups 9 reps 0 lbs" android:id="@+id/exercise6"></TextView>
			</TableRow>
			<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow12">
				<TextView android:layout_height="wrap_content" android:text="Pull ups 9 reps 0 lbs" android:layout_width="wrap_content" android:id="@+id/exercise7"></TextView>
			</TableRow>
			<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tableRow13">
				<TextView android:layout_height="wrap_content" android:text="Pull ups 9 reps 0 lbs" android:layout_width="wrap_content" android:id="@+id/exercise8"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow10" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:id="@+id/textView14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Time: 1:30   Rounds: 3"></TextView>
			</TableRow>
			<TableRow android:id="@+id/tableRow11" android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:id="@+id/textView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Tags: fran, vomit, world record"></TextView>
			</TableRow>
			<Button android:id="@+id/editWODButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editwodButton"></Button>
			<Button android:id="@+id/goBackButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gobackButton"></Button>
		</TableLayout>
	</ScrollView>
</LinearLayout>
